--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
