--- a/src/config.json
+++ b/src/config.json
@@ -15,5 +15,33 @@
   },
   "externalEndpoints": {
     "ipify": "https://api.ipify.org?format=json"
+  },
+  "themes": {
+    "light": {
+      "primary-background": "#F8FAFB",
+      "secondary-background": "whitesmoke",
+      "tertiary-background": "white",
+      "primary-text": "black",
+      "secondary-text": "#111418",
+      "border-color": "black",
+      "highlight-color": "#3498db",
+      "accent-color": "green",
+      "muted-color": "#E6EAF1",
+      "snow-color": "snow",
+      "primary-title": "#5296D5"
+    },
+    "dark": {
+      "primary-background": "#0a0d12",
+      "secondary-background": "#0d121c",
+      "tertiary-background": "#1D1F24",
+      "primary-text": "white",
+      "secondary-text": "#D57B52",
+      "border-color": "white",
+      "highlight-color": "#D57B52",
+      "accent-color": "greenyellow",
+      "muted-color": "#121418",
+      "snow-color": "black",
+      "primary-title": "white"
+    }
   }
 }
